name:                learnyouahaskell
version:             0.0.1
-- synopsis:
-- description:
homepage:            https://github.com/bionikspoon/learnyouahaskell#readme
license:             MIT
license-file:        LICENSE
author:              Manu Phatak
maintainer:          bionikspoon@gmail.com
copyright:           Copyright Manu Phatak (c) 2017
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable learnyouahaskell-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , learnyouahaskell
  default-language:    Haskell2010

test-suite learnyouahaskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , learnyouahaskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/bionikspoon/learnyouahaskell
